log
Thu 09 May 2024 03:06:25 PM UTC: 
 tests:  1|8
total_score: 0/70
920eee7
Thu 09 May 2024 03:09:25 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  4|7
total_score: 5/70
b81860b
Thu 09 May 2024 03:17:27 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
06a49d7
Thu 09 May 2024 03:18:14 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   59 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e8ece15
